--- a/app/src/main/res/layout/aerobic_exercises.xml
+++ b/app/src/main/res/layout/aerobic_exercises.xml
@@ -66,7 +66,7 @@
         android:layout_marginEnd="75dp"
         android:backgroundTint="#E2F163"
         android:text="Submit"
-        android:onClick="goToWorkoutFragment"
+        android:onClick="saveExerciseData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
