--- a/app/src/main/res/layout/non_aerobic_exercises.xml
+++ b/app/src/main/res/layout/non_aerobic_exercises.xml
@@ -19,6 +19,7 @@
         android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
+        android:onClick="saveExerciseData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
