--- a/app/src/main/res/layout/non_aerobic_exercises.xml
+++ b/app/src/main/res/layout/non_aerobic_exercises.xml
@@ -19,7 +19,6 @@
         android:inputType="text"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:onClick="saveExerciseData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -50,6 +49,7 @@
         android:layout_marginEnd="75dp"
         android:backgroundTint="#E2F163"
         android:text="Submit"
+        android:onClick="saveExerciseData"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.448"
@@ -64,6 +64,7 @@
         android:layout_marginTop="16dp"
         android:onClick="goToWorkoutFragment"
         android:src="@drawable/yellowarrow"
+        android:backgroundTint="#232323"
         app:layout_constraintEnd_toStartOf="@+id/textView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
