Updated Calendar to display average
Added code to display average reps and duration by week.

--- a/app/src/main/res/layout/aerobic_exercises.xml
+++ b/app/src/main/res/layout/aerobic_exercises.xml
@@ -6,7 +6,7 @@
     android:background="#232323"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".AerobicExercise">
 
     <EditText
         android:id="@+id/editTextTime"
@@ -73,4 +73,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText"
         app:layout_constraintVertical_bias="0.51" />
+
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/yellowarrow"
+        android:background="#232323"
+        android:onClick="goToWorkoutFragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.28"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.053" />
 </androidx.constraintlayout.widget.ConstraintLayout>
