--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,15 +32,18 @@
         android:text="displays data of date clicked"
          />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/calendarView">
     <TextView
         android:id="@+id/workoutTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/purple"
         android:textSize= "28sp"
-        android:layout_below="@+id/calendarView"
-        android:layout_centerHorizontal="true"
          />
+    </ScrollView>
 
 
 </RelativeLayout>
