--- a/app/src/main/res/layout/admin_user_history.xml
+++ b/app/src/main/res/layout/admin_user_history.xml
@@ -42,6 +42,18 @@
         android:layout_marginTop="-76dp"
         android:text="Return to user" />
 
+    <Button
+        android:id="@+id/sendNotifsButton"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="126dp"
+        android:layout_marginEnd="28dp"
+        android:onClick="goToNotifs"
+        android:text="Send Notifications"
+        android:visibility="visible" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
