--- a/app/src/main/res/layout/spinner_item_checkbox.xml
+++ b/app/src/main/res/layout/spinner_item_checkbox.xml
@@ -17,5 +17,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:paddingStart="8dp"
-        android:textSize="16sp" />
+        android:textColor="@color/purple"
+        android:textSize="24sp" />
 </LinearLayout>
